# Domeneshop---MCP-

./: GITHUB_UPLOAD_INSTRUCTIONS.md  README.md  pyproject.toml
config/: domeneshop-mcp.env.example  estate-targets.example.json  mcp-client.example.json  mcp-client.powershell.example.json  read-only-release-manifest.example.json
docs/: ATLAS_SOLAREX_DOMENESHOP_INTEGRATION_NOTES.md  CONTROLLED_USE_ACCEPTANCE_INDEX.md  DOMENESHOP_MCP_CONTINUATION_TRANSFER_PACK_0325_27062026.md  DOMENESHOP_MCP_FINAL_TRANSFER_REPORT_0245_27062026.md  DOMENESHOP_MCP_PHASE_PLAN_2234_25062026.md  ESTATE_SERVICE_INVENTORY.md  EXTERNAL_CONTROLLED_VALIDATION_RUNBOOK.md  EXTERNAL_VALIDATION_EVIDENCE_TEMPLATE.md  FINAL_RELEASE_GATE_CHECKLIST.md  FINAL_RELEASE_HANDOFF_INDEX.md  FINAL_REPOSITORY_ARCHIVE_INDEX.md  INCIDENT_RESPONSE_PROCEDURES.md  MANUAL_COMPLETION_CHECKLIST_READ_ONLY_RUNTIME_0325_27062026.md  MCP_CLIENT_CONFIGURATION_EXAMPLES.md  OPERATIONAL_RUNBOOK.md  PHASE10_OPERATIONAL_RUNBOOK_INCIDENTS_0135_27062026.md  PHASE11_ESTATE_INTEGRATION_0210_27062026.md  PHASE12_FINAL_VALIDATION_RELEASE_GATE_0245_27062026.md  PHASE13_EXPLICIT_LIVE_CHANGE_RELEASE_PLANNING_0325_27062026.md  PHASE13_RISK_REGISTER_AND_SCOPE.md  PHASE14_ACTIVATION_READINESS_GATE.md  PHASE15_PLACEHOLDER.md  PHASE16_CONTINUITY_EVIDENCE_GATE.md  PHASE17_TRACEABILITY.md  PHASE18_REPOSITORY_SNAPSHOT.md  PHASE19_RELEASE_FREEZE_GATE.md  PHASE20_HANDOFF_PACKAGE_GATE.md  PHASE21_REVIEW_CLOSURE_GATE.md  PHASE22_MAINTENANCE_BASELINE_GATE.md  PHASE23_ARCHIVE_INDEX_GATE.md  PHASE24_RETENTION_INDEX_GATE.md  PHASE25_CHAIN_INDEX_GATE.md  (+39 more)
(+102 files in other folders)
