[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domeneshop-mcp"
version = "0.2.0"
description = "Controlled read-first MCP bridge for Domeneshop API and deployment governance."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "mcp>=1.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
