[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "domeneshop-mcp"
version = "0.8.0"
description = "Controlled read-first MCP bridge for Domeneshop API and deployment governance."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0"
]

[project.optional-dependencies]
server = [
  "mcp>=1.0.0"
]
sftp = [
  "paramiko>=3.4.0"
]
test = [
  "pytest>=8.0.0"
]

[project.scripts]
domeneshop-mcp-server = "domeneshop_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
